fix 40-200 bet
