# docs/swagger.json
@@ -82,6 +82,13 @@
                 "summary": "create bot",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "create bot",
                         "name": "account",
                         "in": "body",
@@ -832,7 +839,7 @@
         },
         "/api/register": {
             "post": {
-                "description": "registering an account",
+                "description": "player registering an account",
                 "consumes": [
                     "application/json"
                 ],
